3x3 ni sharedi qogan

--- a/app/src/main/res/layout/win_dialog.xml
+++ b/app/src/main/res/layout/win_dialog.xml
@@ -92,7 +92,7 @@
             android:layout_marginStart="60dp"
             android:backgroundTint="@color/matchingPaletteColor"
             android:fontFamily="@font/poppins_medium"
-            android:text="New game" />
+            android:text="Next" />
 
     </LinearLayout>
 
