--- a/app/src/main/res/layout/activity_game_activity3x3.xml
+++ b/app/src/main/res/layout/activity_game_activity3x3.xml
@@ -118,7 +118,7 @@
 
         <Button
             android:id="@+id/btn1"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="100dp"
             android:layout_row="0"
             android:layout_column="0"
@@ -133,7 +133,7 @@
 
         <Button
             android:id="@+id/btn2"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="100dp"
             android:layout_row="0"
             android:layout_column="1"
@@ -147,7 +147,7 @@
 
         <Button
             android:id="@+id/btn3"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="100dp"
             android:layout_row="0"
             android:layout_column="2"
@@ -162,7 +162,7 @@
 
         <Button
             android:id="@+id/btn4"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="100dp"
             android:layout_row="1"
             android:layout_column="0"
@@ -177,7 +177,7 @@
 
         <Button
             android:id="@+id/btn5"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="100dp"
             android:layout_row="1"
             android:layout_column="1"
@@ -191,7 +191,7 @@
 
         <Button
             android:id="@+id/btn6"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="100dp"
             android:layout_row="1"
             android:layout_column="2"
@@ -206,7 +206,7 @@
 
         <Button
             android:id="@+id/btn7"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="100dp"
             android:layout_row="2"
             android:layout_column="0"
@@ -221,7 +221,7 @@
 
         <Button
             android:id="@+id/btn8"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="100dp"
             android:layout_row="2"
             android:layout_column="1"
@@ -235,7 +235,7 @@
 
         <Button
             android:id="@+id/btn0"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="100dp"
             android:layout_row="2"
             android:layout_column="2"
@@ -254,21 +254,23 @@
         android:id="@+id/shuffleBtn3"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:background="?attr/selectableItemBackground"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
-        android:src="@drawable/shuffle"
+        android:src="@drawable/shuffle1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        app:tint="@color/shuffleBtnColor" />
+        />
 
     <com.google.android.gms.ads.AdView
-        android:id="@+id/adView2"
+        android:id="@+id/adView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         app:adSize="BANNER"
-        app:adUnitId="ca-app-pub-3862530189628759/7112729337"
+        app:adUnitId="ca-app-pub-8399176622985245/9169820531"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
