--- a/app/src/main/res/layout/activity_game_activity3x3.xml
+++ b/app/src/main/res/layout/activity_game_activity3x3.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background1"
-    >
+    android:background="@drawable/background1">
 
     <ImageView
         android:id="@+id/goBackbtn"
@@ -260,8 +259,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView3"
