--- a/app/src/main/res/layout/lose_dialog.xml
+++ b/app/src/main/res/layout/lose_dialog.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -24,11 +23,11 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="12dp"
+        android:contentDescription="@string/out_of_time_try_to_play_on_easier_mode"
         android:src="@drawable/lose_pic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        android:contentDescription="@string/out_of_time_try_to_play_on_easier_mode" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -59,9 +58,9 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="5dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="5dp"
-        android:layout_marginHorizontal="5dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
